# Spotify_Reviews_Analyzer

./: .env.example  .gitignore  .vercelignore  README.md  alembic.ini  docker-compose.yml  middleware.js  package.json  pyproject.toml  render.yaml  requirements.txt  vercel.json
.github/workflows/: ci.yml
dashboard/: README.md  index.html
data/exports/: golden_questions_report.json  phase4_eval_report.json  phases_3_5_eval_report.json  rq_briefing.json  rq_briefing.md  rq_briefing_export.md  social_trends.json  social_trends.md  validation_sample.csv
data/raw/: app_store.json  mastodon.json  play_store.json  reddit.json
deploy/: render.yaml
docs/: architecture.md  decision.md  implementationplan.md  problemstatement.md
phases/: README.md
phases/phase-01-foundation/: README.md
phases/phase-02-ingestion/: README.md
phases/phase-03-analysis-pipeline/: README.md
phases/phase-04-ai-agent/: README.md
phases/phase-05-social-sources/: README.md
phases/phase-06-dashboard/: README.md
scripts/: render_seed.py  run_phase4_eval.py  run_phases_3_5_eval.py  start_render.py  vercel-build.mjs  vercel_build.py
tests/: conftest.py  test_agent_service.py  test_analytics_briefing.py  test_api_dashboard.py  test_app_store_provider.py  test_db_migrate.py  test_db_types.py  test_deploy_seed.py  test_hashing.py  test_health.py  test_http_client.py  test_ingest_service.py  test_play_store_provider.py  test_problem_analysis.py  test_processing_classifier.py  test_processing_service.py  test_reddit_provider.py  test_settings.py  test_social_providers.py  test_trends_detection.py  test_vercel_build.py
(+96 files in other folders)
